# pyrag-core

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-test.txt
app/: __init__.py  main.py
app/agents/: graph.py
app/agents/tools/: __init__.py  retrieval_tools.py
app/api/v1/: router.py
app/api/v1/endpoints/: agents.py  analytics.py  chat.py  datasets.py  documents.py  search.py
app/core/: config.py  exceptions.py  lifespan.py  logging.py  observability.py  tracking.py  validation.py  version.py
app/core/middleware/: audit.py  auth.py  rate_limit.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial_schema.py
app/db/models/: __init__.py  analytics.py  chunk.py  dataset.py  document.py  job.py  provider.py
app/db/repositories/: __init__.py  analytics.py  base.py  chunk.py  dataset.py  document.py  job.py  provider.py
app/schemas/: dataset.py  document.py  search.py
app/services/embedding/: providers.py
app/services/ingestion/: chunkers.py  cleaner.py  indexer.py  metadata.py  parsers.py  pipeline.py
app/services/llm/: __init__.py  anthropic_adapter.py  base.py  factory.py  gemini_adapter.py  ollama_adapter.py  openai_adapter.py  openrouter_adapter.py  vllm_adapter.py
app/services/retrieval/: context.py  dense.py  hybrid.py  pipeline.py  query_expansion.py  query_understanding.py  reranker.py  sparse.py
app/services/storage/: minio_client.py
app/services/vector/: __init__.py  base.py  elasticsearch_adapter.py  factory.py  milvus_adapter.py  pgvector_adapter.py  qdrant_adapter.py  weaviate_adapter.py
app/ui/: __init__.py  streamlit_app.py
app/worker/: celery_app.py
app/worker/tasks/: ingestion.py
docs/: ARCHITECTURE.md  deployment.md  releasing.md  running.md
scripts/: init_db.sh  load_test.py
tests/ui/: test_streamlit_app.py
tests/unit/: test_api_endpoints.py  test_config.py  test_embedding_providers.py  test_health.py  test_indexer.py  test_ingestion_pipeline.py  test_llm_providers.py  test_minio_client.py  test_qdrant_adapter.py  test_repositories.py  test_retrieval.py  test_security_observability.py  test_vector_base.py
