[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "pyrag-core"
version = "1.0.0"
description = "Open-source Python-first Retrieval-Augmented Generation platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "PyRAG Core Contributors" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Data validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Database
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # Object storage
    "minio>=7.2.0",

    # Vector stores
    "qdrant-client>=1.11.0",

    # LLM providers
    "openai>=1.50.0",
    "anthropic>=0.34.0",
    "google-generativeai>=0.8.0",

    # Embeddings & ML
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.1.0",

    # Document parsers
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "httpx>=0.27.0",

    # Agent framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",

    # Observability
    "langfuse>=2.0.0",
    "langdetect>=1.0.9",

    # Utilities
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "rich>=13.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=28.0.0",
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",
]

weaviate = ["weaviate-client>=4.7.0"]
milvus = ["pymilvus>=2.4.0"]
elasticsearch = ["elasticsearch>=8.15.0"]
cohere = ["cohere>=5.0.0"]

[project.scripts]
pyrag = "app.cli:main"

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in default args (FastAPI Depends pattern)
    "N805",  # first argument of a method should be named 'self' (false positives)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # FastAPI decorators
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "minio.*", "langfuse.*", "langgraph.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "-v",
]
env = [
    "ENVIRONMENT=test",
    "DATABASE_URL=postgresql+asyncpg://pyrag:pyrag@localhost:5432/pyrag_test",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = ["app/db/migrations/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
